--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Delius&family=Poetsen+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Knewave&display=swap');
 
 html {
-  background-color: white;
+  background-color: rgb(255, 253, 236);
   padding-left: 20px;
 }
 
@@ -10,5 +11,25 @@ img{
 }
 
 h1 {
-  font-family: "Poetsen One", sans-serif;
+  font-family: "Poetsen One", sans-serif; 
+  color:rgb(134, 167, 136);
+}
+
+h3{
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 40px;
+  color: #FFCFCF;
+  
+}
+
+p{
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  color: rgb(134, 167, 136);
+  
+  
 }
